--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4837f66a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Creates a summary pivot from the billed FTE data.\n",
+    "\n",
+    "    - Groups by AID and other key fields\n",
+    "    - Aggregates 'No. of FTE' and 'Sum of %'\n",
+    "    - Rounds percentage to 2 decimal places\n",
+    "    - Ensures 'BP CC1' value is blank if originally missing\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Aggregated summary pivot\n",
+    "    \"\"\"\n",
+    "    billed_df = calculate_fte_summary(df)\n",
+    "\n",
+    "    # Fill missing values temporarily to avoid dropping during groupby\n",
+    "    billed_df.fillna(\"Missing\", inplace=True)\n",
+    "\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
+    "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Sum of %': 'sum'\n",
+    "    })\n",
+    "\n",
+    "    summary_df['Sum of %'] = summary_df['Sum of %'].round(2)\n",
+    "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "\n",
+    "    # Replace 'Missing' in BP CC1 with blank\n",
+    "    summary_df['BP CC1'] = summary_df['BP CC1'].replace(\"Missing\", \"\")\n",
+    "\n",
+    "    return summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2e1ab2ff",
    "metadata": {},
    "outputs": [],
