--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,24 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4837f66a",
+   "id": "73f23514",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from decimal import Decimal, ROUND_HALF_UP\n",
+    "\n",
+    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Filter only Billed rows (case-insensitive)\n",
+    "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
+    "\n",
+    "    # Calculate Total FTE per AID\n",
+    "    total_fte_by_aid = billed_df.groupby('AID')['No. of FTE'].sum()\n",
+    "    billed_df['Total FTE'] = billed_df['AID'].map(total_fte_by_aid)\n",
+    "\n",
+    "    # Calculate Sum of % = (No. of FTE / Total FTE) * 100\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "\n",
+    "    return billed_df\n",
+    "\n",
+    "def round_half_up(series: pd.Series, decimals: int = 2) -> pd.Series:\n",
+    "    # Apply Excel-like rounding to a pandas Series\n",
+    "    return series.apply(lambda x: float(Decimal(str(x)).quantize(Decimal('1.' + '0' * decimals), rounding=ROUND_HALF_UP)))\n",
     "\n",
     "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Creates a summary pivot from the billed FTE data.\n",
-    "\n",
-    "    - Groups by AID and other key fields\n",
-    "    - Aggregates 'No. of FTE' and 'Sum of %'\n",
-    "    - Rounds percentage to 2 decimal places\n",
-    "    - Ensures 'BP CC1' value is blank if originally missing\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: Aggregated summary pivot\n",
-    "    \"\"\"\n",
     "    billed_df = calculate_fte_summary(df)\n",
     "\n",
     "    # Fill missing values temporarily to avoid dropping during groupby\n",
@@ -31,13 +39,16 @@
     "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
     "    ]\n",
     "\n",
+    "    # Aggregate values\n",
     "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
     "        'No. of FTE': 'sum',\n",
     "        'Sum of %': 'sum'\n",
     "    })\n",
     "\n",
-    "    summary_df['Sum of %'] = summary_df['Sum of %'].round(2)\n",
+    "    # Rename and apply custom rounding\n",
     "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "    summary_df['Sum of % (unrounded)'] = summary_df['Sum of %']\n",
+    "    summary_df['Sum of %'] = round_half_up(summary_df['Sum of %'])\n",
     "\n",
     "    # Replace 'Missing' in BP CC1 with blank\n",
     "    summary_df['BP CC1'] = summary_df['BP CC1'].replace(\"Missing\", \"\")\n",
