--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f23514",
+   "id": "84425d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adjust_sum_of_percent(summary_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Ensures that Sum of % per AID totals exactly 100 by adjusting the last row per AID.\n",
+    "    \"\"\"\n",
+    "    # Sort to ensure consistent order\n",
+    "    summary_df = summary_df.sort_values(by=['AID']).reset_index(drop=True)\n",
+    "\n",
+    "    # Container for adjusted rows\n",
+    "    adjusted_rows = []\n",
+    "\n",
+    "    for aid, group in summary_df.groupby('AID'):\n",
+    "        group = group.copy()\n",
+    "        rounded_total = group['Sum of %'].sum()\n",
+    "        diff = round(100.0 - rounded_total, 2)  # small diff due to rounding\n",
+    "\n",
+    "        group['Adjustment'] = 0.0\n",
+    "\n",
+    "        if abs(diff) > 0.001:\n",
+    "            # Apply adjustment to last row in this group\n",
+    "            last_idx = group.index[-1]\n",
+    "            group.at[last_idx, 'Adjustment'] = diff\n",
+    "            group.at[last_idx, 'Final Sum of %'] = group.at[last_idx, 'Sum of %'] + diff\n",
+    "        else:\n",
+    "            group['Final Sum of %'] = group['Sum of %']\n",
+    "\n",
+    "        adjusted_rows.append(group)\n",
+    "\n",
+    "    return pd.concat(adjusted_rows).reset_index(drop=True)\n",
+    "summary_df = create_fte_pivot(your_df)\n",
+    "final_df = adjust_sum_of_percent(summary_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09479f5e",
    "metadata": {},
    "outputs": [],
    "source": [
