--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84425d34",
+   "id": "bdbe3088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from decimal import Decimal, ROUND_HALF_UP\n",
+    "\n",
+    "# 1. Excel-style rounding function\n",
+    "def round_half_up(series: pd.Series, decimals: int = 2) -> pd.Series:\n",
+    "    return series.apply(lambda x: float(Decimal(str(x)).quantize(Decimal('1.' + '0'*decimals), rounding=ROUND_HALF_UP)))\n",
+    "\n",
+    "# 2. Step 1: Filter \"Billed\" and calculate % without rounding\n",
+    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
+    "    total_fte_by_aid = billed_df.groupby('AID')['No. of FTE'].sum()\n",
+    "    billed_df['Total FTE'] = billed_df['AID'].map(total_fte_by_aid)\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "    return billed_df\n",
+    "\n",
+    "# 3. Step 2: Create pivot table\n",
+    "def create_fte_pivot(billed_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    billed_df.fillna(\"Missing\", inplace=True)\n",
+    "\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
+    "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Sum of %': 'sum'\n",
+    "    })\n",
+    "\n",
+    "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "    summary_df['Sum of % (unrounded)'] = summary_df['Sum of %']\n",
+    "    summary_df['Sum of % (rounded)'] = round_half_up(summary_df['Sum of %'])\n",
+    "\n",
+    "    # Replace 'Missing' back to blanks for output\n",
+    "    summary_df['BP CC1'] = summary_df['BP CC1'].replace(\"Missing\", \"\")\n",
+    "\n",
+    "    return summary_df\n",
+    "\n",
+    "# 4. Step 3: Adjustment function to ensure total = 100\n",
+    "def adjust_sum_of_percent(summary_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    summary_df = summary_df.copy()\n",
+    "    summary_df['Final Sum of %'] = summary_df['Sum of % (rounded)']  # start with rounded\n",
+    "\n",
+    "    adjusted_rows = []\n",
+    "    for aid, group in summary_df.groupby('AID'):\n",
+    "        rounded_sum = group['Sum of % (rounded)'].sum()\n",
+    "        delta = round(100.00 - rounded_sum, 2)\n",
+    "\n",
+    "        # Apply delta to first row only\n",
+    "        idx_to_adjust = group.index[0]\n",
+    "        summary_df.at[idx_to_adjust, 'Final Sum of %'] += delta\n",
+    "        summary_df.at[idx_to_adjust, 'Adjustment'] = delta\n",
+    "\n",
+    "        # For validation\n",
+    "        summary_df.loc[group.index, 'Sum of % Total after Adjustment'] = \\\n",
+    "            summary_df.loc[group.index, 'Final Sum of %'].sum()\n",
+    "\n",
+    "    return summary_df\n",
+    "\n",
+    "# 5. Step 4: Main runner function\n",
+    "def process_fte_data(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    billed_df = calculate_fte_summary(df)\n",
+    "    summary_df = create_fte_pivot(billed_df)\n",
+    "    final_df = adjust_sum_of_percent(summary_df)\n",
+    "    return final_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47a1065d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09479f5e",
+   "id": "a19cee2f",
    "metadata": {},
    "outputs": [],
    "source": [
