--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "902fe0f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3b74e535d68b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;31m# Loop through Excel files\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolder_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".xlsx\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\".xlsm\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mfile_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolder_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: ''"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "import win32com.client as win32\n",
+    "\n",
+    "# Prompt for folder selection\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "folder_path = filedialog.askdirectory(title=\"Select Folder with Excel Files\")\n",
+    "\n",
+    "# Initialize Excel\n",
+    "excel = win32.gencache.EnsureDispatch('Excel.Application')\n",
+    "excel.Visible = False  # Set to True if you want to see Excel working\n",
+    "\n",
+    "# Loop through Excel files\n",
+    "for filename in os.listdir(folder_path):\n",
+    "    if filename.endswith(\".xlsx\") or filename.endswith(\".xlsm\"):\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "        print(f\"Processing: {filename}\")\n",
+    "        try:\n",
+    "            wb = excel.Workbooks.Open(file_path)\n",
+    "\n",
+    "            sheet_count = wb.Sheets.Count\n",
+    "            if sheet_count >= 3:\n",
+    "                wb.Sheets(3).Activate()  # Activate 3rd sheet\n",
+    "                wb.Sheets(2).Activate()  # Then activate 2nd sheet\n",
+    "\n",
+    "            wb.Save()\n",
+    "            wb.Close(SaveChanges=True)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {filename}: {e}\")\n",
+    "\n",
+    "# Quit Excel\n",
+    "excel.Quit()\n",
+    "print(\"Done.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bdbe3088",
+   "id": "039942cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a1065d",
+   "id": "8bf7fe60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a19cee2f",
+   "id": "44b5439e",
    "metadata": {},
    "outputs": [],
    "source": [
