--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,6 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "# Set folder path where your Excel files are stored\n",
+    "folder_path = r'path_to_your_folder'  # <-- Replace this with your actual folder path\n",
+    "\n",
+    "# To store flagged files and sheet names\n",
+    "issues = []\n",
+    "\n",
+    "# Loop through each Excel file in the folder\n",
+    "for file in os.listdir(folder_path):\n",
+    "    if file.endswith('.xlsx'):\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        try:\n",
+    "            wb = load_workbook(file_path, data_only=True)\n",
+    "            sheet_names = wb.sheetnames\n",
+    "\n",
+    "            # Check only sheet 2 and 3 (index 1 and 2)\n",
+    "            for sheet_index in [1, 2]:\n",
+    "                if sheet_index < len(sheet_names):\n",
+    "                    ws = wb[sheet_names[sheet_index]]\n",
+    "\n",
+    "                    for row in ws.iter_rows(min_row=1, values_only=True):\n",
+    "                        if row[2] == 'Check':  # Column C is index 2 (0-based)\n",
+    "                            # From Column E (index 4) onwards\n",
+    "                            values_to_check = row[4:]\n",
+    "                            if any(val != 0 and val is not None for val in values_to_check):\n",
+    "                                issues.append((file, sheet_names[sheet_index]))\n",
+    "                            break  # No need to search further in this sheet\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {file}: {e}\")\n",
+    "\n",
+    "# Print the issues\n",
+    "if issues:\n",
+    "    print(\"❌ Files with failed validation:\")\n",
+    "    for file_name, sheet_name in issues:\n",
+    "        print(f\"File: {file_name}, Sheet: {sheet_name}\")\n",
+    "else:\n",
+    "    print(\"✅ All files passed the validation checks.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
