--- a/temp.ipynb
+++ b/temp.ipynb
@@ -30,24 +30,28 @@
    "source": [
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
+    "from openpyxl.worksheet.cell_range import CellRange\n",
     "import copy\n",
     "\n",
-    "def replicate_dashboard_columns(\n",
+    "\n",
+    "def replicate_dashboard_block_with_merged_cells(\n",
     "    file_path, sheet_name, source_start_col, source_end_col,\n",
-    "    country_list, hardcoded_row=4\n",
+    "    country_list, header_row=3, text_row=5\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
     "\n",
-    "    # --- Calculate source col indexes ---\n",
     "    start_col_idx = column_index_from_string(source_start_col)\n",
     "    end_col_idx = column_index_from_string(source_end_col)\n",
     "    num_cols_to_copy = end_col_idx - start_col_idx + 1\n",
     "\n",
-    "    # --- Where to start inserting? ---\n",
-    "    current_col_idx = end_col_idx + 2  # +1 for gap +1 to start next\n",
+    "    # Where to start inserting first copy\n",
+    "    current_col_idx = end_col_idx + 2  # +1 for gap, +1 to land on next open col\n",
     "\n",
     "    for country in country_list:\n",
+    "        print(f\"🔹 Adding block for: {country}\")\n",
+    "\n",
+    "        # --- Copy block cell by cell ---\n",
     "        for row in ws.iter_rows(\n",
     "            min_col=start_col_idx,\n",
     "            max_col=end_col_idx,\n",
@@ -58,11 +62,11 @@
     "                new_col_idx = current_col_idx + i\n",
     "                target_cell = ws.cell(row=cell.row, column=new_col_idx, value=cell.value)\n",
     "\n",
-    "                # Copy formula as is → Excel will adjust refs when reopened\n",
+    "                # Keep formula as-is — Excel adjusts when saved/opened\n",
     "                if cell.data_type == 'f':\n",
     "                    target_cell.value = cell.value\n",
     "\n",
-    "                # Copy formatting\n",
+    "                # Copy style\n",
     "                target_cell.font = copy.copy(cell.font)\n",
     "                target_cell.border = copy.copy(cell.border)\n",
     "                target_cell.fill = copy.copy(cell.fill)\n",
@@ -70,27 +74,63 @@
     "                target_cell.protection = copy.copy(cell.protection)\n",
     "                target_cell.alignment = copy.copy(cell.alignment)\n",
     "\n",
-    "        # Overwrite the hardcoded country in new block’s row 4\n",
-    "        ws.cell(row=hardcoded_row, column=current_col_idx, value=country)\n",
+    "        # --- Create merged cell for row 3 (country name header) ---\n",
+    "        merged_start = get_column_letter(current_col_idx)\n",
+    "        merged_end = get_column_letter(current_col_idx + num_cols_to_copy - 1)\n",
+    "        new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
     "\n",
-    "        # Update where to start next block (+ copied block + 1 blank)\n",
+    "        # Unmerge if any overlaps just to be safe\n",
+    "        for merged_range in list(ws.merged_cells.ranges):\n",
+    "            if CellRange(new_merge_range).coord in merged_range.coord:\n",
+    "                ws.merged_cells.ranges.remove(merged_range)\n",
+    "\n",
+    "        ws.merge_cells(new_merge_range)\n",
+    "        ws[f\"{merged_start}{header_row}\"] = country\n",
+    "\n",
+    "        # --- Copy style from original merged cell ---\n",
+    "        source_header_cell = ws[f\"{source_start_col}{header_row}\"]\n",
+    "        new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
+    "\n",
+    "        new_header_cell.font = copy.copy(source_header_cell.font)\n",
+    "        new_header_cell.border = copy.copy(source_header_cell.border)\n",
+    "        new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
+    "        new_header_cell.number_format = copy.copy(source_header_cell.number_format)\n",
+    "        new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
+    "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
+    "\n",
+    "        # --- Copy merged text row 5 (V5:Y5) if needed ---\n",
+    "        text_merge_start = get_column_letter(current_col_idx)\n",
+    "        text_merge_end = get_column_letter(current_col_idx + (column_index_from_string(\"Y\") - column_index_from_string(\"V\")))\n",
+    "        new_text_merge_range = f\"{text_merge_start}{text_row}:{text_merge_end}{text_row}\"\n",
+    "\n",
+    "        for merged_range in list(ws.merged_cells.ranges):\n",
+    "            if CellRange(new_text_merge_range).coord in merged_range.coord:\n",
+    "                ws.merged_cells.ranges.remove(merged_range)\n",
+    "\n",
+    "        ws.merge_cells(new_text_merge_range)\n",
+    "        # Copy text + style from original\n",
+    "        ws[f\"{text_merge_start}{text_row}\"] = ws[f\"{source_start_col}{text_row}\"].value\n",
+    "        ws[f\"{text_merge_start}{text_row}\"].font = copy.copy(ws[f\"{source_start_col}{text_row}\"].font)\n",
+    "        ws[f\"{text_merge_start}{text_row}\"].alignment = copy.copy(ws[f\"{source_start_col}{text_row}\"].alignment)\n",
+    "\n",
+    "        # --- Advance for next block ---\n",
     "        current_col_idx += num_cols_to_copy + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(f\"✅ Dashboard blocks replicated for: {', '.join(country_list)}\")\n",
-    "\n",
+    "    print(\"✅ All country blocks added!\")\n",
     "\n",
     "\n",
     "# --- EXAMPLE USAGE ---\n",
     "if __name__ == \"__main__\":\n",
-    "    replicate_dashboard_columns(\n",
+    "    replicate_dashboard_block_with_merged_cells(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
-    "        source_start_col=\"U\",\n",
+    "        source_start_col=\"V\",\n",
     "        source_end_col=\"AC\",\n",
     "        country_list=[\"USA\", \"Canada\", \"India\"],\n",
-    "        hardcoded_row=4\n",
+    "        header_row=3,\n",
+    "        text_row=5\n",
     "    )\n"
    ]
   },
