--- a/temp.ipynb
+++ b/temp.ipynb
@@ -34,9 +34,14 @@
     "import copy\n",
     "\n",
     "\n",
-    "def replicate_dashboard_block_with_merged_cells(\n",
-    "    file_path, sheet_name, source_start_col, source_end_col,\n",
-    "    country_list, header_row=3, text_row=5\n",
+    "def replicate_dashboard_block_with_safe_merged_cells(\n",
+    "    file_path,\n",
+    "    sheet_name,\n",
+    "    source_start_col,\n",
+    "    source_end_col,\n",
+    "    country_list,\n",
+    "    header_row=3,\n",
+    "    text_row=5\n",
     "):\n",
     "    wb = load_workbook(file_path)\n",
     "    ws = wb[sheet_name]\n",
@@ -45,52 +50,68 @@
     "    end_col_idx = column_index_from_string(source_end_col)\n",
     "    num_cols_to_copy = end_col_idx - start_col_idx + 1\n",
     "\n",
-    "    # Where to start inserting first copy\n",
-    "    current_col_idx = end_col_idx + 2  # +1 for gap, +1 to land on next open col\n",
+    "    # Where to start inserting the first block (+2 means 1 blank col gap)\n",
+    "    current_col_idx = end_col_idx + 2\n",
     "\n",
     "    for country in country_list:\n",
     "        print(f\"🔹 Adding block for: {country}\")\n",
     "\n",
-    "        # --- Copy block cell by cell ---\n",
+    "        # --- Copy the block ---\n",
     "        for row in ws.iter_rows(\n",
     "            min_col=start_col_idx,\n",
     "            max_col=end_col_idx,\n",
     "            min_row=1,\n",
     "            max_row=ws.max_row\n",
     "        ):\n",
-    "            for i, cell in enumerate(row):\n",
+    "            for i, source_cell in enumerate(row):\n",
     "                new_col_idx = current_col_idx + i\n",
-    "                target_cell = ws.cell(row=cell.row, column=new_col_idx, value=cell.value)\n",
+    "                new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
     "\n",
-    "                # Keep formula as-is — Excel adjusts when saved/opened\n",
-    "                if cell.data_type == 'f':\n",
-    "                    target_cell.value = cell.value\n",
+    "                # ✅ Copy value *if not merged cell copy problem*\n",
+    "                if not isinstance(source_cell, type(ws.cell(row=1, column=1))):\n",
+    "                    continue  # skip if it's not a real cell\n",
     "\n",
-    "                # Copy style\n",
-    "                target_cell.font = copy.copy(cell.font)\n",
-    "                target_cell.border = copy.copy(cell.border)\n",
-    "                target_cell.fill = copy.copy(cell.fill)\n",
-    "                target_cell.number_format = copy.copy(cell.number_format)\n",
-    "                target_cell.protection = copy.copy(cell.protection)\n",
-    "                target_cell.alignment = copy.copy(cell.alignment)\n",
+    "                # ⚡ Do NOT assign value if it's inside a merged range except top-left\n",
+    "                in_merged = False\n",
+    "                for merge in ws.merged_cells.ranges:\n",
+    "                    if (source_cell.coordinate in merge):\n",
+    "                        # Is this the top-left cell of that merge?\n",
+    "                        if source_cell.coordinate == merge.coord.split(\":\")[0]:\n",
+    "                            new_cell.value = source_cell.value\n",
+    "                        in_merged = True\n",
+    "                        break\n",
     "\n",
-    "        # --- Create merged cell for row 3 (country name header) ---\n",
+    "                if not in_merged:\n",
+    "                    new_cell.value = source_cell.value\n",
+    "\n",
+    "                # ✅ Copy formula\n",
+    "                if source_cell.data_type == 'f':\n",
+    "                    new_cell.value = source_cell.value\n",
+    "\n",
+    "                # ✅ Copy style\n",
+    "                new_cell.font = copy.copy(source_cell.font)\n",
+    "                new_cell.border = copy.copy(source_cell.border)\n",
+    "                new_cell.fill = copy.copy(source_cell.fill)\n",
+    "                new_cell.number_format = copy.copy(source_cell.number_format)\n",
+    "                new_cell.protection = copy.copy(source_cell.protection)\n",
+    "                new_cell.alignment = copy.copy(source_cell.alignment)\n",
+    "\n",
+    "        # --- Handle new merged header row ---\n",
     "        merged_start = get_column_letter(current_col_idx)\n",
     "        merged_end = get_column_letter(current_col_idx + num_cols_to_copy - 1)\n",
     "        new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
     "\n",
-    "        # Unmerge if any overlaps just to be safe\n",
-    "        for merged_range in list(ws.merged_cells.ranges):\n",
-    "            if CellRange(new_merge_range).coord in merged_range.coord:\n",
-    "                ws.merged_cells.ranges.remove(merged_range)\n",
+    "        # Remove old overlaps\n",
+    "        for merge in list(ws.merged_cells.ranges):\n",
+    "            if CellRange(new_merge_range).coord in merge.coord:\n",
+    "                ws.merged_cells.ranges.remove(merge)\n",
     "\n",
     "        ws.merge_cells(new_merge_range)\n",
-    "        ws[f\"{merged_start}{header_row}\"] = country\n",
+    "        ws[f\"{merged_start}{header_row}\"] = country  # ✅ Only top-left cell gets value\n",
     "\n",
-    "        # --- Copy style from original merged cell ---\n",
+    "        # Copy style from original merged header\n",
     "        source_header_cell = ws[f\"{source_start_col}{header_row}\"]\n",
     "        new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
-    "\n",
     "        new_header_cell.font = copy.copy(source_header_cell.font)\n",
     "        new_header_cell.border = copy.copy(source_header_cell.border)\n",
     "        new_header_cell.fill = copy.copy(source_header_cell.fill)\n",
@@ -98,32 +119,39 @@
     "        new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
     "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
     "\n",
-    "        # --- Copy merged text row 5 (V5:Y5) if needed ---\n",
+    "        # --- Handle merged text row ---\n",
+    "        # Example: V5:Y5 in original\n",
     "        text_merge_start = get_column_letter(current_col_idx)\n",
-    "        text_merge_end = get_column_letter(current_col_idx + (column_index_from_string(\"Y\") - column_index_from_string(\"V\")))\n",
+    "        text_merge_end = get_column_letter(current_col_idx + (column_index_from_string(\"Y\") - start_col_idx))\n",
     "        new_text_merge_range = f\"{text_merge_start}{text_row}:{text_merge_end}{text_row}\"\n",
     "\n",
-    "        for merged_range in list(ws.merged_cells.ranges):\n",
-    "            if CellRange(new_text_merge_range).coord in merged_range.coord:\n",
-    "                ws.merged_cells.ranges.remove(merged_range)\n",
+    "        for merge in list(ws.merged_cells.ranges):\n",
+    "            if CellRange(new_text_merge_range).coord in merge.coord:\n",
+    "                ws.merged_cells.ranges.remove(merge)\n",
     "\n",
     "        ws.merge_cells(new_text_merge_range)\n",
-    "        # Copy text + style from original\n",
+    "        # ✅ Only top-left gets text\n",
     "        ws[f\"{text_merge_start}{text_row}\"] = ws[f\"{source_start_col}{text_row}\"].value\n",
-    "        ws[f\"{text_merge_start}{text_row}\"].font = copy.copy(ws[f\"{source_start_col}{text_row}\"].font)\n",
-    "        ws[f\"{text_merge_start}{text_row}\"].alignment = copy.copy(ws[f\"{source_start_col}{text_row}\"].alignment)\n",
+    "        text_source_cell = ws[f\"{source_start_col}{text_row}\"]\n",
+    "        text_new_cell = ws[f\"{text_merge_start}{text_row}\"]\n",
+    "        text_new_cell.font = copy.copy(text_source_cell.font)\n",
+    "        text_new_cell.border = copy.copy(text_source_cell.border)\n",
+    "        text_new_cell.fill = copy.copy(text_source_cell.fill)\n",
+    "        text_new_cell.number_format = copy.copy(text_source_cell.number_format)\n",
+    "        text_new_cell.protection = copy.copy(text_source_cell.protection)\n",
+    "        text_new_cell.alignment = copy.copy(text_source_cell.alignment)\n",
     "\n",
-    "        # --- Advance for next block ---\n",
+    "        # Advance for next block (+1 for blank col)\n",
     "        current_col_idx += num_cols_to_copy + 1\n",
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅ All country blocks added!\")\n",
+    "    print(\"✅✅ All blocks copied successfully with safe merged cell handling!\")\n",
     "\n",
     "\n",
-    "# --- EXAMPLE USAGE ---\n",
+    "# --- EXAMPLE ---\n",
     "if __name__ == \"__main__\":\n",
-    "    replicate_dashboard_block_with_merged_cells(\n",
+    "    replicate_dashboard_block_with_safe_merged_cells(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
     "        source_start_col=\"V\",\n",
