--- a/temp.ipynb
+++ b/temp.ipynb
@@ -31,10 +31,11 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
     "from openpyxl.worksheet.cell_range import CellRange\n",
+    "from openpyxl.formula.translate import Translator\n",
     "import copy\n",
     "\n",
     "\n",
-    "def replicate_dashboard_block_with_safe_merged_cells(\n",
+    "def replicate_dashboard_block_with_translated_formulas(\n",
     "    file_path,\n",
     "    sheet_name,\n",
     "    source_start_col,\n",
@@ -67,25 +68,14 @@
     "                new_col_idx = current_col_idx + i\n",
     "                new_cell = ws.cell(row=source_cell.row, column=new_col_idx)\n",
     "\n",
-    "                # ✅ Copy value *if not merged cell copy problem*\n",
-    "                if not isinstance(source_cell, type(ws.cell(row=1, column=1))):\n",
-    "                    continue  # skip if it's not a real cell\n",
-    "\n",
-    "                # ⚡ Do NOT assign value if it's inside a merged range except top-left\n",
-    "                in_merged = False\n",
-    "                for merge in ws.merged_cells.ranges:\n",
-    "                    if (source_cell.coordinate in merge):\n",
-    "                        # Is this the top-left cell of that merge?\n",
-    "                        if source_cell.coordinate == merge.coord.split(\":\")[0]:\n",
-    "                            new_cell.value = source_cell.value\n",
-    "                        in_merged = True\n",
-    "                        break\n",
-    "\n",
-    "                if not in_merged:\n",
-    "                    new_cell.value = source_cell.value\n",
-    "\n",
-    "                # ✅ Copy formula\n",
+    "                # ✅ Copy value or translated formula\n",
     "                if source_cell.data_type == 'f':\n",
+    "                    orig_formula = source_cell.value\n",
+    "                    origin = source_cell.coordinate\n",
+    "                    target = new_cell.coordinate\n",
+    "                    new_formula = Translator(orig_formula, origin=origin).translate_formula(target)\n",
+    "                    new_cell.value = new_formula\n",
+    "                else:\n",
     "                    new_cell.value = source_cell.value\n",
     "\n",
     "                # ✅ Copy style\n",
@@ -96,12 +86,12 @@
     "                new_cell.protection = copy.copy(source_cell.protection)\n",
     "                new_cell.alignment = copy.copy(source_cell.alignment)\n",
     "\n",
-    "        # --- Handle new merged header row ---\n",
+    "        # --- Handle merged header row ---\n",
     "        merged_start = get_column_letter(current_col_idx)\n",
     "        merged_end = get_column_letter(current_col_idx + num_cols_to_copy - 1)\n",
     "        new_merge_range = f\"{merged_start}{header_row}:{merged_end}{header_row}\"\n",
     "\n",
-    "        # Remove old overlaps\n",
+    "        # Remove overlaps if needed\n",
     "        for merge in list(ws.merged_cells.ranges):\n",
     "            if CellRange(new_merge_range).coord in merge.coord:\n",
     "                ws.merged_cells.ranges.remove(merge)\n",
@@ -109,7 +99,7 @@
     "        ws.merge_cells(new_merge_range)\n",
     "        ws[f\"{merged_start}{header_row}\"] = country  # ✅ Only top-left cell gets value\n",
     "\n",
-    "        # Copy style from original merged header\n",
+    "        # Copy header style\n",
     "        source_header_cell = ws[f\"{source_start_col}{header_row}\"]\n",
     "        new_header_cell = ws[f\"{merged_start}{header_row}\"]\n",
     "        new_header_cell.font = copy.copy(source_header_cell.font)\n",
@@ -120,7 +110,6 @@
     "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
     "\n",
     "        # --- Handle merged text row ---\n",
-    "        # Example: V5:Y5 in original\n",
     "        text_merge_start = get_column_letter(current_col_idx)\n",
     "        text_merge_end = get_column_letter(current_col_idx + (column_index_from_string(\"Y\") - start_col_idx))\n",
     "        new_text_merge_range = f\"{text_merge_start}{text_row}:{text_merge_end}{text_row}\"\n",
@@ -130,8 +119,8 @@
     "                ws.merged_cells.ranges.remove(merge)\n",
     "\n",
     "        ws.merge_cells(new_text_merge_range)\n",
-    "        # ✅ Only top-left gets text\n",
     "        ws[f\"{text_merge_start}{text_row}\"] = ws[f\"{source_start_col}{text_row}\"].value\n",
+    "\n",
     "        text_source_cell = ws[f\"{source_start_col}{text_row}\"]\n",
     "        text_new_cell = ws[f\"{text_merge_start}{text_row}\"]\n",
     "        text_new_cell.font = copy.copy(text_source_cell.font)\n",
@@ -146,12 +135,12 @@
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅✅ All blocks copied successfully with safe merged cell handling!\")\n",
+    "    print(\"✅✅ All blocks copied successfully with translated formulas and formatting!\")\n",
     "\n",
     "\n",
     "# --- EXAMPLE ---\n",
     "if __name__ == \"__main__\":\n",
-    "    replicate_dashboard_block_with_safe_merged_cells(\n",
+    "    replicate_dashboard_block_with_translated_formulas(\n",
     "        file_path=\"your_dashboard.xlsx\",\n",
     "        sheet_name=\"Dashboard\",\n",
     "        source_start_col=\"V\",\n",
