--- a/temp.ipynb
+++ b/temp.ipynb
@@ -109,6 +109,21 @@
     "        new_header_cell.protection = copy.copy(source_header_cell.protection)\n",
     "        new_header_cell.alignment = copy.copy(source_header_cell.alignment)\n",
     "\n",
+    "        # --- Fill ROW 4 below merged header with same country name ---\n",
+    "        for i in range(num_cols_to_copy):\n",
+    "            col_letter = get_column_letter(current_col_idx + i)\n",
+    "            cell = ws[f\"{col_letter}{header_row + 1}\"]\n",
+    "            cell.value = country\n",
+    "\n",
+    "            # Optional: match style from the same row in the source block\n",
+    "            source_cell = ws[f\"{get_column_letter(start_col_idx + i)}{header_row + 1}\"]\n",
+    "            cell.font = copy.copy(source_cell.font)\n",
+    "            cell.border = copy.copy(source_cell.border)\n",
+    "            cell.fill = copy.copy(source_cell.fill)\n",
+    "            cell.number_format = copy.copy(source_cell.number_format)\n",
+    "            cell.protection = copy.copy(source_cell.protection)\n",
+    "            cell.alignment = copy.copy(source_cell.alignment)\n",
+    "\n",
     "        # --- Handle merged text row ---\n",
     "        text_merge_start = get_column_letter(current_col_idx)\n",
     "        text_merge_end = get_column_letter(current_col_idx + (column_index_from_string(\"Y\") - start_col_idx))\n",
@@ -135,7 +150,7 @@
     "\n",
     "    wb.save(file_path)\n",
     "    wb.close()\n",
-    "    print(\"✅✅ All blocks copied successfully with translated formulas and formatting!\")\n",
+    "    print(\"✅✅ All blocks copied successfully with translated formulas, merged headers, and country name in row 4!\")\n",
     "\n",
     "\n",
     "# --- EXAMPLE ---\n",
@@ -145,7 +160,7 @@
     "        sheet_name=\"Dashboard\",\n",
     "        source_start_col=\"V\",\n",
     "        source_end_col=\"AC\",\n",
-    "        country_list=[\"USA\", \"Canada\", \"India\"],\n",
+    "        country_list=[\"Paris\", \"Hongkong\", \"India\"],\n",
     "        header_row=3,\n",
     "        text_row=5\n",
     "    )\n"
