--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,6 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
+    "import os\n",
+    "\n",
+    "def run_task_two():\n",
+    "    # === CONFIG ===\n",
+    "    master_file = \"Base_Dashboard.xlsx\"\n",
+    "    report_names = [\n",
+    "        \"Investor Relations\",\n",
+    "        \"Stress Testing\",\n",
+    "        \"APEX (FC)\",\n",
+    "        \"Finance COO\",\n",
+    "        \"Financial Support\"\n",
+    "    ]\n",
+    "\n",
+    "    sheets_and_cells = [\n",
+    "        (\"Index\", \"D3\"),\n",
+    "        (\"Summary\", \"D3\"),\n",
+    "        (\"P&L Item View\", \"B3\"),\n",
+    "        (\"DC by Country\", \"B3\"),\n",
+    "        (\"Headcount by Country\", \"B3\"),\n",
+    "        (\"Driller\", \"B3\")\n",
+    "    ]\n",
+    "\n",
+    "    with xw.App(visible=False) as app:\n",
+    "        wb = app.books.open(master_file)\n",
+    "        \n",
+    "        # Get month from 'Dates'!C4\n",
+    "        month_text = wb.sheets['Dates'].range('C4').value  # e.g. 'May-25'\n",
+    "        month_yy = month_text.replace(\"-\", \"20\")  # crude, adjust if needed\n",
+    "        month_part, yy_part = month_text.split('-')\n",
+    "        year_full = \"20\" + yy_part\n",
+    "        month_year = f\"{month_part} {year_full}\"  # 'May 2025'\n",
+    "\n",
+    "        # Find Reporting sheet\n",
+    "        reporting_sheet = None\n",
+    "        for sh in wb.sheets:\n",
+    "            if 'Reporting' in sh.name:\n",
+    "                reporting_sheet = sh\n",
+    "                break\n",
+    "\n",
+    "        if not reporting_sheet:\n",
+    "            raise ValueError(\"No sheet with 'Reporting' found.\")\n",
+    "\n",
+    "        for report_name in report_names:\n",
+    "            # Duplicate the original for each report\n",
+    "            wb_copy = wb.copy()\n",
+    "            \n",
+    "            # Update Reporting sheet name\n",
+    "            new_reporting_name = f\"{month_year} Reporting\"\n",
+    "            wb_copy.sheets[reporting_sheet.index].name = new_reporting_name\n",
+    "\n",
+    "            # Update Reporting sheet cells\n",
+    "            reporting_ws = wb_copy.sheets[new_reporting_name]\n",
+    "            reporting_ws.range(\"C20\").value = report_name\n",
+    "            reporting_ws.range(\"B25\").value = f\"{month_year} Results\"\n",
+    "\n",
+    "            # Update other sheets/cells\n",
+    "            for sheet_name, cell in sheets_and_cells:\n",
+    "                ws = wb_copy.sheets[sheet_name]\n",
+    "                ws.range(cell).value = report_name\n",
+    "\n",
+    "            # Save\n",
+    "            output_name = f\"Dashboard_{report_name}.xlsx\"\n",
+    "            wb_copy.save(os.path.join(os.getcwd(), output_name))\n",
+    "            wb_copy.close()\n",
+    "        \n",
+    "        wb.close()\n",
+    "        print(\"✅ All reports created!\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_task_two()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -28,6 +107,8 @@
     }
    ],
    "source": [
+    "#Working fine for duplicating cuntries block with formula updation, but not handling blockof totals.- Task one\n",
+    "\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
     "from openpyxl.worksheet.cell_range import CellRange\n",
