--- a/temp.ipynb
+++ b/temp.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import xlwings as xw\n",
     "import os\n",
+    "import shutil\n",
     "\n",
     "def run_task_two():\n",
     "    # === CONFIG ===\n",
@@ -30,49 +31,45 @@
     "    ]\n",
     "\n",
     "    with xw.App(visible=False) as app:\n",
-    "        wb = app.books.open(master_file)\n",
-    "        \n",
-    "        # Get month from 'Dates'!C4\n",
-    "        month_text = wb.sheets['Dates'].range('C4').value  # e.g. 'May-25'\n",
-    "        month_yy = month_text.replace(\"-\", \"20\")  # crude, adjust if needed\n",
-    "        month_part, yy_part = month_text.split('-')\n",
-    "        year_full = \"20\" + yy_part\n",
-    "        month_year = f\"{month_part} {year_full}\"  # 'May 2025'\n",
-    "\n",
-    "        # Find Reporting sheet\n",
-    "        reporting_sheet = None\n",
-    "        for sh in wb.sheets:\n",
-    "            if 'Reporting' in sh.name:\n",
-    "                reporting_sheet = sh\n",
-    "                break\n",
-    "\n",
-    "        if not reporting_sheet:\n",
-    "            raise ValueError(\"No sheet with 'Reporting' found.\")\n",
-    "\n",
     "        for report_name in report_names:\n",
-    "            # Duplicate the original for each report\n",
-    "            wb_copy = wb.copy()\n",
+    "            # 📌 Open a fresh copy each loop\n",
+    "            wb = app.books.open(master_file)\n",
     "            \n",
+    "            # Get month from 'Dates'!C4\n",
+    "            month_text = wb.sheets['Dates'].range('C4').value  # e.g. 'May-25'\n",
+    "            month_part, yy_part = month_text.split('-')\n",
+    "            year_full = \"20\" + yy_part\n",
+    "            month_year = f\"{month_part} {year_full}\"  # 'May 2025'\n",
+    "\n",
+    "            # Find Reporting sheet\n",
+    "            reporting_sheet = None\n",
+    "            for sh in wb.sheets:\n",
+    "                if 'Reporting' in sh.name:\n",
+    "                    reporting_sheet = sh\n",
+    "                    break\n",
+    "\n",
+    "            if not reporting_sheet:\n",
+    "                raise ValueError(\"No sheet with 'Reporting' found.\")\n",
+    "\n",
     "            # Update Reporting sheet name\n",
     "            new_reporting_name = f\"{month_year} Reporting\"\n",
-    "            wb_copy.sheets[reporting_sheet.index].name = new_reporting_name\n",
+    "            reporting_sheet.name = new_reporting_name\n",
     "\n",
     "            # Update Reporting sheet cells\n",
-    "            reporting_ws = wb_copy.sheets[new_reporting_name]\n",
+    "            reporting_ws = wb.sheets[new_reporting_name]\n",
     "            reporting_ws.range(\"C20\").value = report_name\n",
     "            reporting_ws.range(\"B25\").value = f\"{month_year} Results\"\n",
     "\n",
     "            # Update other sheets/cells\n",
     "            for sheet_name, cell in sheets_and_cells:\n",
-    "                ws = wb_copy.sheets[sheet_name]\n",
+    "                ws = wb.sheets[sheet_name]\n",
     "                ws.range(cell).value = report_name\n",
     "\n",
     "            # Save\n",
     "            output_name = f\"Dashboard_{report_name}.xlsx\"\n",
-    "            wb_copy.save(os.path.join(os.getcwd(), output_name))\n",
-    "            wb_copy.close()\n",
-    "        \n",
-    "        wb.close()\n",
+    "            wb.save(os.path.join(os.getcwd(), output_name))\n",
+    "            wb.close()\n",
+    "\n",
     "        print(\"✅ All reports created!\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
