--- a/temp.ipynb
+++ b/temp.ipynb
@@ -7,6 +7,44 @@
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
+    "\n",
+    "def fix_product_control(filepath):\n",
+    "    with xw.App(visible=False) as app:\n",
+    "        wb = app.books.open(filepath)\n",
+    "        ws = wb.sheets['Data']\n",
+    "\n",
+    "        # ✅ Read headers from Row 2\n",
+    "        header = ws.range('A2').expand('right').value\n",
+    "        try:\n",
+    "            bf_col = header.index('Business Framework') + 1\n",
+    "            bfg_col = header.index('Business Framework Group') + 1\n",
+    "        except ValueError:\n",
+    "            raise ValueError(\"Column name not found!\")\n",
+    "\n",
+    "        # ✅ Find last row in first column\n",
+    "        last_row = ws.range('A' + str(ws.cells.last_cell.row)).end('up').row\n",
+    "\n",
+    "        # ✅ Loop through data rows only, starting from row 3\n",
+    "        for row in range(3, last_row + 1):\n",
+    "            bf_val = ws.cells(row, bf_col).value\n",
+    "            if str(bf_val).strip().upper() == 'PRODUCT CONTROL':\n",
+    "                ws.cells(row, bfg_col).value = 'L3 - Financial Control & Tax'\n",
+    "\n",
+    "        wb.save()\n",
+    "        wb.close()\n",
+    "        print(\"✅ PRODUCT CONTROL check done and saved.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    fix_product_control(\"Base_Dashboard.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlwings as xw\n",
     "import os\n",
     "import shutil\n",
     "\n",
