--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,36 +6,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xlwings as xw\n",
+    "import win32com.client as win32\n",
     "\n",
-    "def fix_product_control(filepath):\n",
-    "    with xw.App(visible=False) as app:\n",
-    "        wb = app.books.open(filepath)\n",
-    "        ws = wb.sheets['Data']\n",
+    "def fix_product_control_fast(filepath):\n",
+    "    excel = win32.gencache.EnsureDispatch('Excel.Application')\n",
+    "    excel.Visible = False  # Show Excel window if needed for debugging\n",
     "\n",
-    "        # ✅ Read headers from Row 2\n",
-    "        header = ws.range('A2').expand('right').value\n",
-    "        try:\n",
-    "            bf_col = header.index('Business Framework') + 1\n",
-    "            bfg_col = header.index('Business Framework Group') + 1\n",
-    "        except ValueError:\n",
-    "            raise ValueError(\"Column name not found!\")\n",
+    "    wb = excel.Workbooks.Open(filepath)\n",
+    "    ws = wb.Sheets('Data')\n",
     "\n",
-    "        # ✅ Find last row in first column\n",
-    "        last_row = ws.range('A' + str(ws.cells.last_cell.row)).end('up').row\n",
+    "    # Header row is 2, data starts from row 3\n",
+    "    last_row = ws.Cells(ws.Rows.Count, 1).End(-4162).Row  # -4162 == xlUp\n",
     "\n",
-    "        # ✅ Loop through data rows only, starting from row 3\n",
-    "        for row in range(3, last_row + 1):\n",
-    "            bf_val = ws.cells(row, bf_col).value\n",
-    "            if str(bf_val).strip().upper() == 'PRODUCT CONTROL':\n",
-    "                ws.cells(row, bfg_col).value = 'L3 - Financial Control & Tax'\n",
+    "    # Find columns\n",
+    "    header = [ws.Cells(2, col).Value for col in range(1, ws.UsedRange.Columns.Count + 1)]\n",
+    "    bf_col = header.index('Business Framework') + 1\n",
+    "    bfg_col = header.index('Business Framework Group') + 1\n",
     "\n",
-    "        wb.save()\n",
-    "        wb.close()\n",
-    "        print(\"✅ PRODUCT CONTROL check done and saved.\")\n",
+    "    # Apply AutoFilter on Business Framework\n",
+    "    ws.Range(ws.Cells(2, bf_col), ws.Cells(last_row, bfg_col)).AutoFilter(Field=bf_col, Criteria1='PRODUCT CONTROL')\n",
+    "\n",
+    "    # Loop visible cells only (filtered)\n",
+    "    rng = ws.Range(ws.Cells(3, bf_col), ws.Cells(last_row, bf_col)).SpecialCells(12)  # 12 = xlCellTypeVisible\n",
+    "\n",
+    "    for cell in rng:\n",
+    "        ws.Cells(cell.Row, bfg_col).Value = 'L3 - Financial Control and Tax'\n",
+    "\n",
+    "    # Remove filter\n",
+    "    ws.AutoFilterMode = False\n",
+    "\n",
+    "    wb.Save()\n",
+    "    wb.Close(False)\n",
+    "    excel.Quit()\n",
+    "\n",
+    "    print(\"✅ PRODUCT CONTROL fix done with filter!\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    fix_product_control(\"Base_Dashboard.xlsx\")\n"
+    "    fix_product_control_fast(\"Base_Dashboard.xlsx\")\n"
    ]
   },
   {
